--- a/Views/Partials/Head.ejs
+++ b/Views/Partials/Head.ejs
@@ -1,5 +1,29 @@
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rimaclean Lavanderia | RJ</title>
+
+    <!--  Leaflet's Map CSS (WEBPAGE) -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin="" />
+
+    <!-- Make sure you put this AFTER Leaflet's CSS (WEBPAGE)-->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
+
     <style>
+
+        /*////////////////////////ANIMATION CLASSES /////////////////////////////////////////*/
+        .animate-up {
+            animation-name: up; 
+            animation-duration: 300ms;
+            animation-fill-mode: backwards;
+        }
+        
+        /*/////////////////////////////////// HEADER CSS ///////////////////////////////*/
+        /*/////////////////////////////////// HEADER CSS ///////////////////////////////*/
         @font-face {
                 font-family: 'BlueRiver' ;
                 src: url('/Partials/BlueRiver.otf') format('opentype');
@@ -13,12 +37,12 @@
             padding: .1rem; 
             background: rgb(37, 37, 39);
         }
-        nav {
+        header nav {
             display:flex;
             
             
         }
-        a {
+        header nav a {
             display: flex;
             size: 2rem;
             flex: .8;
@@ -26,7 +50,7 @@
             margin-left: 6.5rem;
     
         }
-        p {
+        header nav p {
             color: rgb(249, 250, 252);
             font-family: 'BlueRiver', Times, serif;
             font-size: 19px;
@@ -39,7 +63,7 @@
             margin-right: -4rem;
             
         }
-        ul  {
+        header nav ul  {
             display: flex; 
             list-style: none; 
             align-items: center;
@@ -69,9 +93,10 @@
             margin-left: 4rem;
             align-items:center;
 
+        /*//////////////////////////END OF HEADER CSS////////////////////////////////////////////////////////////*/
 
+        /*//////////////////////////      WEBPAGE CSS////////////////////////////////////////////////////////////*/
             
-
         }
         .container {
             display: flex;
@@ -116,18 +141,99 @@
             align-items: center;
             justify-content:center;
         }
-        main { 
+        main{ 
             display: flex;
             flex: 1;
             border: 1px solid;
             height: 80vh;
             align-items: center;
             text-align: center;
-            background-image: url(/Images/localização.jpeg);
+            /*background-image: url(/Images/localização.jpeg);*/
             background-position: center;
             background-size: cover;
 
         }
+
+        /* ---------> CSS MAP  <---------*/
+        main #mapid{
+            width: 100%;
+            height: 100%;
+            animation-delay: 200ms;
+        }
+
+        /* ---------> CSS MAP BUTTON  <---------*/
+        
+        a.create-orphanage {
+            position: absolute;
+            right: 4rem;
+            bottom: 4rem;
+
+            z-index: 10;
+
+            width: 6.4rem;
+            height: 6.4rem;
+            background: #15C3D6;
+            border: 0;
+            border-radius: 2rem;
+            
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            transition: background-color 200ms;
+        }
+
+        a.create-orphanage:hover {
+            background: #17D6EB;
+        }
+
+        .leaflet-popup-content-wrapper {
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 20px;
+        }
+
+        .leaflet-popup-content {
+            color: #0089A5;
+            margin: .8rem 1.2rem;
+            font-family: 'BlueRiver', Times, serif;
+            font-size: 19px;
+            display: flex;
+            flex: 2;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .leaflet-popup-content a {
+            width: 4rem;
+            height: 4rem;
+            background: #15C3D6;
+            box-shadow: 17.2868px 27.6589px 41.4884px rgba(23, 142, 166, 0.16);
+            border-radius: 12px;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            
+            transition: background-color .2s;
+        }
+
+
+        .leaflet-popup-tip {
+            display: none;
+        }
+
+        .leaflet-container {
+            font: 700 2rem/1 'Nunito', sans-serif;
+
+            z-index: 5;
+        }
+
+        /*//////////////////////////END OF WEBPAGE CSS////////////////////////////////////////////////////////////*/
+
+        /*//////////////////////////      FOOTER CSS             ///////////////////////////////////////////////*/
+
+
         footer {
             display: flex;
             margin-top:auto;
@@ -136,10 +242,17 @@
             margin-top: 0;
             background:rgb(37, 37, 39);
             border: 1px solid;
-            
             }
-
+            
+        footer a{
+            display: flex;
+            size: 2rem;
+            flex: .8;
+            align-items: center;
+            margin-left: 6.5rem;
+            
         }
+
         footer a:nth-child(1) {
             display: flex;
             justify-content: flex-start;
@@ -164,10 +277,16 @@
             display: flex;
             flex: 5;
             font-family: 'BlueRiver', Times, serif;
+            color: rgb(249, 250, 252);
             font-size: 22px;
             font-weight: normal;
             
             }
+            
+        /*//////////////////////////END OF FOOTER CSS////////////////////////////////////////////////////////////*/
+
+        /*//////////////////////////      SERVIÇOS CSS             ///////////////////////////////////////////////*/
+
         button {
             display: flex;
             align-items: center;
@@ -188,11 +307,6 @@
             background: lightgrey;
             
         }
-        main img {
-            width: 290px%;
-            height: 290px;
-        }    
-
         article aside{
             flex-basis: 15%;
             display: flex;
@@ -203,7 +317,6 @@
             gap:4.6rem;
             background: lightgrey;
         }
-
-        }
+        
     </style>
 </head>
