Start Home/Finish Servico

--- a/Views/Pages/Servicos.ejs
+++ b/Views/Pages/Servicos.ejs
@@ -6,32 +6,32 @@
 
     <%- include('../Partials/Header'); %>
 
-    <article class="container">
-        <aside>
-            <button>
-                <img src="../images/Delave.jpeg"> DELAVE
-            </button>
-            <button>
-                <img src="../images/Bigodes.jpeg"> BIGODES
-            </button>
-            <button>
-                <img src="../images/Tie dye.jpeg"> TIE DYE
-            </button>
-            <button>
-                <img src="../images/Puidos.jpeg"> PUÍDOS
-            </button>
-            <button>
-                <img src="../images/Tingimento.jpeg"> TINGIMENTO
-            </button>
-            <button>
-                <img src="../images/Used.jpeg"> USED
-            </button>
-        </aside>
-        <main class="gallery">
-            <img src="../images/Foto1.jpeg" alt=""><img src="../images/Foto2.jpeg" alt=""><img src="../images/Foto3.jpeg" alt=""><img src="../images/Foto4.jpeg" alt=""><img src="../images/Foto5.jpeg" alt=""><img src="../images/Foto6.jpeg" alt="">
+    
+    <div class="container2 animate-appear" >
+        <h1 class="TituloS" class="animate-appear">SERVIÇOS</h1>
+        
+        <main class="MainS" class="animate-appear"> 
+            
+            <div class="ContainerS">
+                <div class="full-img">
+                    <img class="displayed-img" src="../Images/Foto1.jpg" alt="Closeup of a human eye">
+                </div>
+
+                <div class="thumb-bar" ></div>
+            </div>
+            <div class="ContainerT">
+                <div class="ServicesBox">
+                    <div class="Sbox1">CONHEÇA NOSSOS SERVIÇOS, POSSUÍMOS SOLUÇÕES IDEAIS PARA SEU NEGÓCIO</div>
+                    <div class="Sbox2">Clique nas imagens da nossa galeria para saber mais! </div>
+                    <div class="displayed-txt" id="message1"></div>
+                </div>
+                                
+            </div>
+        
+        <script src="../scripts/main.js" class="Services" ></script>
         </main>
 
-    </article>
+    </div>
 
     <%- include('../Partials/Footer'); %>
     
