--- a/Views/Pages/Webpage.ejs
+++ b/Views/Pages/Webpage.ejs
@@ -8,7 +8,7 @@
     <%- include('../Partials/Header'); %>
 
     <div class="container">
-        <aside class="animate-up">
+        <aside class="animate-appear">
             <section class="item ">Entre em Contato!</section>
             <section> 
                 Endereço: 
@@ -31,7 +31,7 @@
                 Sábados de 08 às 12hrs.
             </section>
         </aside>
-        <main>
+        <main class="mainMap">
             <div id="mapid" class="animate-appear"></div>
             
             <div class="orphanages">
