--- a/Views/Partials/Footer.ejs
+++ b/Views/Partials/Footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<footer class="animate-up">
     <a href="https://www.facebook.com/lavanderia.rimaclean/"><img src="../Images/Face.jpeg" width="35" height="35"></a>
     <a href="https://www.instagram.com/rimacleanlavanderia/"><img src="../Images/Instagram.jpeg" width="35" height="35"></a>
     <a href="https://www.youtube.com/watch?v=CE8ZcUBapWI"><img src="../Images/Youtubebest.jpeg" width="57" height="44"></a>
