--- a/Views/Partials/Header.ejs
+++ b/Views/Partials/Header.ejs
@@ -1,12 +1,12 @@
 <header>
-        <nav>
+        <nav class="animate-up">
             <a href=""> <img src="/Images/Rimaclean.jpeg" width="133" height="85"> </a>
             <p> Rimaclean Lavanderia <br> Industrial LTDA </p>
             <ul>
                 <li><a href="http://localhost:8080/" title="Home">HOME</a></li>
-                <li><a href="../Pages/NossaHistoria" title="Sobre Nós">SOBRE NÓS</a></li>
+                <li><a href="http://localhost:8080/Sobre" title="Sobre Nós">SOBRE NÓS</a></li>
                 <li><a href="http://localhost:8080/Servicos" title="Serviços">SERVIÇOS</a></li>
-                <li><a href="../Pages/Contato" title="Contato">CONTATO</a></li>
+                <li><a href="http://localhost:8080/Contato" title="Contato">CONTATO</a></li>
             </ul>
         </nav>
     </header>
