--- a/Views/Partials/Head.ejs
+++ b/Views/Partials/Head.ejs
@@ -16,12 +16,38 @@
     <style>
 
         /*////////////////////////ANIMATION CLASSES /////////////////////////////////////////*/
+        @keyframes up {
+            from {
+                opacity: 0;
+                transform: translateY(16px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes appear {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
         .animate-up {
             animation-name: up; 
             animation-duration: 300ms;
             animation-fill-mode: backwards;
         }
         
+        .animate-appear {
+            animation-name: appear;
+            animation-duration: 300ms;
+            animation-fill-mode: backwards;
+        }
         /*/////////////////////////////////// HEADER CSS ///////////////////////////////*/
         /*/////////////////////////////////// HEADER CSS ///////////////////////////////*/
         @font-face {
@@ -32,24 +58,36 @@
         }
         * {
             margin: .08rem;
+            box-sizing: border-box;
         }
+
+        body {
+        height: 100vh;
+        width: 100vw;
+        box-sizing: border-box;
+        }
+
         header{
+            display: flex;
             padding: .1rem; 
             background: rgb(37, 37, 39);
+            height: 12.5vh;
+            width: 100vw;
+            box-sizing: border-box;
         }
         header nav {
-            display:flex;
-            
-            
+            display:flex;  
+            flex:1;
         }
+
         header nav a {
             display: flex;
             size: 2rem;
             flex: .8;
             align-items: center;
             margin-left: 6.5rem;
-    
         }
+
         header nav p {
             color: rgb(249, 250, 252);
             font-family: 'BlueRiver', Times, serif;
@@ -61,8 +99,8 @@
             margin-left: 10rem;
             width: 100px;
             margin-right: -4rem;
-            
         }
+
         header nav ul  {
             display: flex; 
             list-style: none; 
@@ -70,8 +108,7 @@
             flex: 2;
             margin-right: 6.5rem;
             text-align: center;
-            
-            /*Retiraospontosdostopicos*/
+            /*List style None Retiraospontosdostopicos*/
         }
 
         a:hover {
@@ -88,10 +125,12 @@
             border: .1rem solid white;
             text-decoration:none;
             justify-content:center;
-            width: 5.5rem;
+            width: 5.9rem;
             margin-right: -2.2rem;
             margin-left: 4rem;
             align-items:center;
+            overflow: hidden;
+            white-space: nowrap;
 
         /*//////////////////////////END OF HEADER CSS////////////////////////////////////////////////////////////*/
 
@@ -101,6 +140,9 @@
         .container {
             display: flex;
             gap: .08rem;
+            height: 81vh;
+            width: 100vw;
+            box-sizing: border-box;
         }
         aside{
             flex-basis: 25%;
@@ -145,7 +187,7 @@
             display: flex;
             flex: 1;
             border: 1px solid;
-            height: 80vh;
+            height: 80.9vh;
             align-items: center;
             text-align: center;
             /*background-image: url(/Images/localização.jpeg);*/
@@ -155,7 +197,13 @@
         }
 
         /* ---------> CSS MAP  <---------*/
+
+        .mainMap {
+        display: flex;
+        }
+
         main #mapid{
+            display: flex;
             width: 100%;
             height: 100%;
             animation-delay: 200ms;
@@ -233,15 +281,17 @@
 
         /*//////////////////////////      FOOTER CSS             ///////////////////////////////////////////////*/
 
-
         footer {
             display: flex;
             margin-top:auto;
-            height: 3rem;
+            /*height: 3rem;*/
+            height: 6.5vh;
+            width: 100vw;
             align-items: center;
             margin-top: 0;
             background:rgb(37, 37, 39);
             border: 1px solid;
+            box-sizing: border-box;
             }
             
         footer a{
@@ -278,45 +328,196 @@
             flex: 5;
             font-family: 'BlueRiver', Times, serif;
             color: rgb(249, 250, 252);
-            font-size: 22px;
+            font-size: 20px;
             font-weight: normal;
-            
             }
             
         /*//////////////////////////END OF FOOTER CSS////////////////////////////////////////////////////////////*/
 
         /*//////////////////////////      SERVIÇOS CSS             ///////////////////////////////////////////////*/
 
-        button {
-            display: flex;
-            align-items: center;
-            line-height: 0;
-            background: white;
-            width: 100%;
-            background: rgb(202, 221, 228);
+        .container2 {
+        height: 81vh;
+        width: 100vw;
+        box-sizing: border-box;
         }
-        button img {
-            width: 2rem;
-            height: 2rem;
+
+        .MainS {
+        position: relative; 
+        display: flex;
+        flex: 1;
+        border: 1px solid;
+        /*height: 80vh;*/
+        height: 76.9vh;
+        align-items: center;
+        text-align: center;
+        background-position: center;
+        background-size: 100%;
         }
-        .gallery {
-            display:flex;
-            flex-wrap: wrap;
-            gap: .8rem;
-            justify-content: center;
-            background: lightgrey;
-            
+
+        /*Solução para fazer somente o background opaco*/
+        .MainS::before {
+        content: "";
+        background-image: url("../Images/Lavanderia_Industrial.jpg");
+        background-size: 100%;
+        position:absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        opacity: 0.15;
         }
-        article aside{
-            flex-basis: 15%;
-            display: flex;
-            flex-direction: column;
-            border: 1px solid;
-            height: 80.9vh;
+
+        .TituloS {
+        font-family: Hind, sans-serif;
+        font-size: 26px;
+        color: rgb(249, 250, 252); 
+        text-align: center;
+        background-color: rgb(37, 37, 39); 
+        height: 4vh;
+        border: 1px solid;
+        border-color: rgb(37, 37, 39);
+        }
+        /*Container para Imagens na Esquerda*/
+        .ContainerS {
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+        height: 90%;
+        margin: 0 auto;
+        background-color:rgba(70, 72, 107, 0.5);
+        z-index: 999;
+        padding: 12px 30px;
+        align-items: center;
+        justify-content: center;
+        }
+
+        .thumb-bar img{
+        display: block;
+        width: 7.1vw;
+        height: 12vh;
+        float: left;
+        cursor: pointer;
+        align-items: center;
+        justify-content: center;
+        border-radius: 10px;
+        }
+
+        .thumb-bar img:hover {
+        opacity: 0.7;
+        }
+
+        .full-img {
+        position: relative;
+        display: block;
+        align-content: center;
+        }
+
+        .displayed-img {
+        width: 30vw;
+        height: 52vh;
+        border-radius: 10px;
+        background-color: red;
+        }
+        /*Container para Texto na Direita*/
+        .ContainerT {
+        display: flex;
+        width: 40%;
+        height: 90%;
+        margin: 0 auto;
+        background-color:rgba(70, 72, 107, 0.5);
+        align-items: center;
+        text-align: center;
+        padding: 12px 30px;
+        z-index: 999;
+        }
+
+        .ServicesBox {
+        display: flex;
+        flex-direction: column;
+        font-family: Hind, sans-serif;
+        width: 95%;
+        height: 95%;
+        background-color: rgba(252, 250, 250, 0.5);
+        border-radius: 10px;
+        }
+
+        .Sbox1 {
+        display: flex;
+        height: 24%;
+        width: 100%;
+        font-size: 27px;
+        font-weight: bold;
+        color: rgb(65, 66, 66); 
+        align-items: center;
+        text-align: center;
+        background-color: rgba(165, 163, 163, 0.5);
+        border-radius: 10px;
+        padding: 12px 10px;
+        }
+
+        .Sbox2 {
+        display: flex;
+        height: 6%;
+        width: 100%;
+        font-size: 14px;
+        color: rgb(65, 66, 66); 
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        padding: 12px 30px;
+        }
+
+        .displayed-txt{
+        display: flex;
+        height: 70%;
+        width: 100%;
+        font-size: 16px;
+        align-items: center;
+        text-align: justify;
+        justify-content: center;
+        padding: 12px 30px;
+        text-justify: inter-word;
+     
+        }
+
+        /*//////////////////////////END OF SERVICOS CSS////////////////////////////////////////////////////////////*/
+
+        /*//////////////////////////      HOME CSS             ///////////////////////////////////////////////*/
+
+        .back-video {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: -1;
+        }
+
+        @media (min-aspect-ratio: 16/9) {
+            .back-video{
+                width: 100%;
+                height: auto;
+            }
+        }
+
+        @media (max-aspect-ratio: 16/9) {
+            .back-video{
+                width: auto;
+                height: 100%;
+            }
+        }
+
+        .content {
             text-align: center;
-            gap:4.6rem;
-            background: lightgrey;
         }
+        .content h1 {
+            font-size: 46px;
+            font-family: Helvetica;
+            color: white;
+            font-weight: 600;
+        }
+
+            </style>
+        </head>
+
         
-    </style>
-</head>
+        
