--- a/Views/Pages/Home.ejs
+++ b/Views/Pages/Home.ejs
@@ -9,9 +9,10 @@
 
      <div class="container"> 
 
-        <div class="content">
-            <h1>Um Novo Conceito </h1>
-            <h1>Em Beneficiamento Têxtil</h1>
+        <div class="HomeContent">
+            <div class="HomeTitle">Rimaclean Lavanderia </div>
+            <div class="HomeSubTitle">Um Novo Conceito Em Beneficiamento Têxtil</div>
+            <button id="SaibaMais">Saiba Mais ></button>
         </div>
         
         
