--- a/Views/Partials/Header.ejs
+++ b/Views/Partials/Header.ejs
@@ -1,6 +1,8 @@
 <header>
         <nav class="animate-up">
-            <a href=""> <img src="/Images/Rimaclean.jpeg" width="133" height="85"> </a>
+            <div class="logo">
+                <a href=""> <img src="/Images/Rimaclean.jpeg" width="94" height="60"> </a>
+            </div>
             <p> Rimaclean Lavanderia <br> Industrial LTDA </p>
             <ul>
                 <li><a href="http://localhost:8080/" title="Home">HOME</a></li>
