--- a/Views/Partials/Head.ejs
+++ b/Views/Partials/Head.ejs
@@ -557,19 +557,46 @@
             margin-bottom: 20px;
         }
 
-        #SaibaMais {
+
+        #SaibaMais{
             width: 11%;
             text-align: center;
             font-family: 'Roboto', sans-serif;
             color: white;
             background-color: transparent;
-            font-size: 20px;
+            font-size: 19px;
             padding: 0.6rem;
             border: .06rem solid white;
             white-space: nowrap;
+            text-decoration: none;
             
         }
 
+        .containerHome {
+            display: flex;
+            flex-direction: column;
+            gap: .08rem;
+            height: 188vh;
+            width: 100vw;
+            box-sizing: border-box;
+        }
+
+        .containerHomeAbertura {
+            display: flex;
+            flex-direction: column;
+            gap: .08rem;
+            height: 94vh;
+            width: 100vw;
+            box-sizing: border-box;
+        }
+
+        .containerProposito {
+            display: flex;
+            gap: .08rem;
+            height: 81vh;
+            width: 100vw;
+            box-sizing: border-box;
+        }
             </style>
         </head>
 
