--- a/Views/Pages/Home.ejs
+++ b/Views/Pages/Home.ejs
@@ -6,23 +6,37 @@
 <body>
 
     <%- include('../Partials/Header'); %>
+    <div class="containerHome">
+        <div class="containerHomeAbertura"> 
 
-     <div class="container"> 
+            <div class="HomeContent">
+                <div class="HomeTitle">Rimaclean Lavanderia </div>
+                <div class="HomeSubTitle">Um Novo Conceito Em Beneficiamento Têxtil</div>
+                <a href="#PropositoTitle" id="SaibaMais">
+                    Saiba Mais >
+                </a>
+            </div>
+            
+            
+            <video autoplay loop muted plays-inline class="back-video">
+                <source src="../Images/video.mp4" type="video/mp4">
+            </video>
 
-        <div class="HomeContent">
-            <div class="HomeTitle">Rimaclean Lavanderia </div>
-            <div class="HomeSubTitle">Um Novo Conceito Em Beneficiamento Têxtil</div>
-            <button id="SaibaMais">Saiba Mais ></button>
+        </div> 
+        <div class="containerProposito">
+            <div class="PropositoTitle" id="PropositoTitle">Nosso Propósito </div>
+            <div class="PropositoTexto">Bem-vindo à Rimaclean Lavanderia Industrial! Nosso ponto de encontro quando o assunto é Beneficiamento de Jeans, Tinturaria, Passadoria e Customização de Peças.
+
+                Na Rimaclean Lavanderia, temos orgulho de nossa capacidade de processar sua produção com perfeição em escala end-to-end, desde os primeiros testes com peças-piloto, até a entrega da mercadoria pronta no seu endereço. Seja uma lavagem simples ou um processo de tingimento complexo, nós o cobrimos, tudo com atenção aos detalhes e foco na qualidade do nosso serviço.
+                
+                Então, por que esperar? Venha nos visitar na Rimaclean Lavanderia e veja por si mesmo porque somos os melhores no ramo. Nossa equipe amigável e experiente está sempre à disposição para responder a quaisquer perguntas que você possa ter e para ajudá-lo a encontrar a solução perfeita para suas necessidades.
+    
+                Conheça-nos e descubra hoje mesmo o diferencial da Rimaclean Lavanderia!
+            </div>
+            <div class="PropositoImage"><img src="../Images/FotoHome.jpg" width="250" height="250"></div>
+
         </div>
-        
-        
-        <video autoplay loop muted plays-inline class="back-video">
-            <source src="../Images/video.mp4" type="video/mp4">
-        </video>
-
-       
-   </div> 
-
+    </div>
    
 
     <%- include('../Partials/Footer'); %>
