--- a/Views/Pages/Home.ejs
+++ b/Views/Pages/Home.ejs
@@ -24,18 +24,20 @@
 
         </div> 
         <div class="containerProposito">
-            <div class="PropositoTitle" id="PropositoTitle">Nosso Propósito </div>
-            <div class="PropositoTexto">Bem-vindo à Rimaclean Lavanderia Industrial! Nosso ponto de encontro quando o assunto é Beneficiamento de Jeans, Tinturaria, Passadoria e Customização de Peças.
-
+            <div class="PropositoTitle animate-appearHome" id="PropositoTitle">Nosso Propósito </div>
+            <div class="PropositoTexto animate-left" id="PropositoTexto">Bem-vindo à Rimaclean Lavanderia Industrial! Nosso ponto de encontro quando o assunto é Beneficiamento de Jeans, Tinturaria, Passadoria e Customização de Peças.
+                <br><br>
                 Na Rimaclean Lavanderia, temos orgulho de nossa capacidade de processar sua produção com perfeição em escala end-to-end, desde os primeiros testes com peças-piloto, até a entrega da mercadoria pronta no seu endereço. Seja uma lavagem simples ou um processo de tingimento complexo, nós o cobrimos, tudo com atenção aos detalhes e foco na qualidade do nosso serviço.
-                
+                <br><br>
                 Então, por que esperar? Venha nos visitar na Rimaclean Lavanderia e veja por si mesmo porque somos os melhores no ramo. Nossa equipe amigável e experiente está sempre à disposição para responder a quaisquer perguntas que você possa ter e para ajudá-lo a encontrar a solução perfeita para suas necessidades.
-    
-                Conheça-nos e descubra hoje mesmo o diferencial da Rimaclean Lavanderia!
+                <br><br>
+                Venha nos conhecer e descubra hoje mesmo o diferencial da Rimaclean Lavanderia!
             </div>
-            <div class="PropositoImage"><img src="../Images/FotoHome.jpg" width="250" height="250"></div>
+            <div class="PropositoImagem animate-right" id="PropositoImagem"> <img src="../Images/Jeans_SM.png" width="490" height="780"></div>
 
         </div>
+    
+    <script src="../scripts/home.js" class="Services" ></script>
     </div>
    
 
