--- a/Views/Pages/Servicos.ejs
+++ b/Views/Pages/Servicos.ejs
@@ -28,7 +28,7 @@
                                 
             </div>
         
-        <script src="../scripts/main.js" class="Services" ></script>
+        <script src="../scripts/servicos.js" class="Services" ></script>
         </main>
 
     </div>
