--- a/Views/Pages/Sobre.ejs
+++ b/Views/Pages/Sobre.ejs
@@ -7,14 +7,37 @@
 
     <%- include('../Partials/Header'); %>
 
-    <div class="container">
-        
-        <main class="mainMap">
-            
-        </main>
-    </div>
+    <div class="containerSobre">
+        <div class="NossaHistoria">
 
-   
+            <div id="SobreTexto1">
+                <div id="SobreTitle"># Nossa História</div>
+                <br>
+                A Rimaclean Lavanderia abriu as portas em 1996, sendo uma das primeiras lavanderias industriais de São João de Meriti. Ao longo dos anos, a Rimaclean adquiriu a mestria técnica no mercado do jeans, e graças a sua preocupação socio-ambiental, sempre gerou impacto positivo na comunidade ao seu redor.
+                <br><br>
+                Nossa empresa sempre fez uso de uma boa relação com clientes e fornecedores para somar ao negócio do jeans no estado do Rio de Janeiro. Assim como o mercado da moda, estamos em constante transformação para atender às demandas dos nossos clientes, oferecendo o melhor custo-benefício do mercado.
+            </div>
+
+            <div id="SobreImagem1"><img src="../Images/Team4.png" width="420"height="319"</div></div>
+
+        </div>
+
+        <div class="NossasPessoas">
+
+            <div id="SobreImagem1"><img src="../Images/Team6.png" width="420"height="319"</div>
+
+            <div id="SobreTexto1">
+
+                <div id="SobreTitle"># Nossas Pessoas</div>
+                <br>
+                Na Rimaclean Lavanderia, nosso sucesso está enraizado na paixão e no comprometimento de nosso pessoal. Acreditamos que nossa equipe é nosso maior patrimônio e é por isso que investimos em seu crescimento e bem-estar.
+                <br><br>
+                Entendemos que uma equipe feliz e motivada é fundamental para oferecer o melhor serviço aos nossos clientes. É por isso que promovemos uma cultura positiva e inclusiva no local de trabalho, onde todos se sentem valorizados e apreciados. 
+                <br><br>
+                Somos um só time, e o nosso compromisso com nossas pessoas e nossa comunidade é prioridade. Sabemos que, ao valorizar nossa equipe, estamos garantindo que possamos continuar a fornecer serviços de lavanderia industrial da mais alta qualidade nos próximos anos.
+            </div>
+        </div>
+    </div>
 
     <%- include('../Partials/Footer'); %>
     
