--- a/Views/Partials/Head.ejs
+++ b/Views/Partials/Head.ejs
@@ -28,6 +28,30 @@
             }
         }
 
+        @keyframes right {
+            from {
+                opacity: 0;
+                transform: translateX(160px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        @keyframes left {
+            from {
+                opacity: 0;
+                transform: translateX(-160px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
         @keyframes appear {
             from {
                 opacity: 0;
@@ -46,6 +70,24 @@
         .animate-appear {
             animation-name: appear;
             animation-duration: 300ms;
+            animation-fill-mode: backwards;
+        }
+
+        .animate-right {
+            animation-name: right;
+            animation-duration: 600ms;
+            animation-fill-mode: backwards;
+        }
+
+        .animate-left {
+            animation: left;
+            animation-duration: 600ms;
+            animation-fill-mode: backwards;
+        }
+
+        .animate-appearHome {
+            animation-name: appear;
+            animation-duration: 600ms;
             animation-fill-mode: backwards;
         }
         /*/////////////////////////////////// HEADER CSS ///////////////////////////////*/
@@ -75,6 +117,7 @@
             width: 100vw;
             box-sizing: border-box;
         }
+
         header nav {
             display:flex;  
             flex:1;
@@ -88,15 +131,13 @@
             justify-items: center;
             margin-left: 6.5rem;
             height: auto;
-            
-            
         }
+
         .logo a {
             align-items: center;
             justify-content: center;
         }
             
-        
         header nav a img{
             display: flex;
             /*size: 2rem;*/
@@ -106,7 +147,6 @@
             height: 11.7vh;
             align-items: center;
             justify-content: center;
-            
         }
 
         header nav p {
@@ -153,15 +193,16 @@
             align-items:center;
             overflow: hidden;
             white-space: nowrap;
+        }
 
         /*//////////////////////////END OF HEADER CSS////////////////////////////////////////////////////////////*/
 
         /*//////////////////////////      WEBPAGE CSS////////////////////////////////////////////////////////////*/
             
-        }
+        
         .container {
             display: flex;
-            gap: .08rem;
+            /*gap: .08rem;*/
             height: 81vh;
             width: 100vw;
             box-sizing: border-box;
@@ -305,14 +346,14 @@
 
         footer {
             display: flex;
-            margin-top:auto;
+            /*margin-top:auto;*/
             /*height: 3rem;*/
             height: 6.5vh;
             width: 100vw;
             align-items: center;
-            margin-top: 0;
+            /*margin-top: 0;*/
             background:rgb(37, 37, 39);
-            border: 1px solid;
+            /*border: 1px solid;*/
             box-sizing: border-box;
             }
             
@@ -534,6 +575,14 @@
                 font-weight: normal;
                 font-style: normal;
         }
+
+        @font-face {
+                font-family: 'Roboto-Bold' ;
+                src: url('/Partials/Roboto-Bold.ttf') format('truetype');
+                font-weight: normal;
+                font-style: normal;
+        }
+
         .HomeContent {
             display: flex;
             flex: 1;
@@ -585,18 +634,155 @@
             display: flex;
             flex-direction: column;
             gap: .08rem;
-            height: 94vh;
+            height: 87.5vh;
             width: 100vw;
             box-sizing: border-box;
         }
 
         .containerProposito {
             display: flex;
+            flex: 1;
             gap: .08rem;
+            height: 100.5vh;
+            width: 100vw;
+            box-sizing: border-box;
+            flex-direction: row;
+            text-align: center;
+            justify-content: center;
+            font-family: 'Roboto', sans-serif;
+            color: white;
+            align-items: center;
+            background-image: url("../Images/jeans_background.jpg");
+        }
+
+        #PropositoTitle {
+            display: flex;
+            flex: 1;
+            transform: rotate(270deg);
+            text-align: left;
+            font-family: 'Roboto-Bold', sans-serif;
+            font-size: 6.5rem;
+            font-style: bold;
+            width: 100%;
+            /*margin-left: -5%;*/
+            height: auto;
+        }
+
+        #PropositoTitle::after {
+            content: "";
+            position: absolute;
+            bottom: -5px;
+            left: 50%;
+            right: 0;
+            height: 2px;
+            background-color: white;
+        }
+
+        #PropositoTitle::before {
+            content: "";
+            position: absolute;
+            top: -5px;
+            left: 0;
+            right: 50%;
+            height: 2px;
+            background-color: white;
+        }
+
+        #PropositoTexto {
+            display: flex;
+            flex: 1.3;
+            font-size: 1.1rem;
+            height: 100%;
+            /*width: 25vw;*/
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            justify-items: center;
+            margin-left: -5%;
+            
+
+        }
+
+        #PropositoImagem {
+            display: flex;
+            flex: 1;
+            height: 100%;
+            align-items: center;
+            align-content: center;
+            justify-content: center;
+            justify-items: center;
+        }
+
+        #PropositoImagem img {
+            margin-bottom: -16%;
+        }
+
+         /*//////////////////////////END OF HOME CSS////////////////////////////////////////////////////////////*/
+
+        /*//////////////////////////      SOBRE CSS             ///////////////////////////////////////////////*/
+
+        .containerSobre{
+            display: flex;
+            flex-direction: column;
+            /*gap: .08rem;*/
             height: 81vh;
             width: 100vw;
             box-sizing: border-box;
+            font-family: 'Roboto', sans-serif;
+            color: white;
+            background-image: url('../Images/sobre_bg8.jpg');
         }
+
+        .NossaHistoria {
+            display: flex;
+            flex-direction: row;
+            flex: 1;
+            height: 100vh;
+        }
+
+        .NossasPessoas {
+            display: flex;
+            flex-direction: row;
+            flex: 1;
+            
+        }
+
+        #SobreTexto1 {
+            display: flex;
+            flex-direction: column;
+            flex: 2;
+            padding: 2rem;
+            justify-content: left;
+            font-size: 1.1rem;
+        }
+
+        #SobreTitle {
+            display: flex;
+            flex: .5;
+            align-content: center;
+            align-items: center;
+            justify-content: left;
+            justify-items: left;
+            height: 100%;
+            font-family: 'Roboto-Bold', sans-serif;
+            font-size: 1.5rem;
+        }
+
+        #SobreTitle::after {
+            content: "";
+            display: block;
+            width: 77%;
+            padding-top: 27px;
+            border-bottom: 2px solid #f9dd94;
+        }
+
+        #SobreImagem1 {
+            display: flex;
+            flex: 1;
+            padding: .3rem;
+        }
+
+        
             </style>
         </head>
 
