Final Push Desktop Version

--- a/Views/Pages/Sobre.ejs
+++ b/Views/Pages/Sobre.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <%- include('../Partials/Head'); %>
 
 <body>
 
     <%- include('../Partials/Header'); %>
 
-    <div class="containerSobre">
+    <div class="containerSobre animate-appear">
         <div class="NossaHistoria">
 
             <div id="SobreTexto1">
