--- a/Views/Pages/Servicos.ejs
+++ b/Views/Pages/Servicos.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <%- include('../Partials/Head'); %>
 <body>
@@ -8,7 +9,7 @@
 
     
     <div class="container2 animate-appear" >
-        <h1 class="TituloS" class="animate-appear">SERVIÇOS</h1>
+        <!--<h1 class="TituloS" class="animate-appear">SERVIÇOS</h1>-->
         
         <main class="MainS" class="animate-appear"> 
             
