--- a/Views/Partials/Head.ejs
+++ b/Views/Partials/Head.ejs
@@ -63,13 +63,13 @@
 
         .animate-up {
             animation-name: up; 
-            animation-duration: 300ms;
+            animation-duration: 200ms;
             animation-fill-mode: backwards;
         }
         
         .animate-appear {
             animation-name: appear;
-            animation-duration: 300ms;
+            animation-duration: 200ms;
             animation-fill-mode: backwards;
         }
 
@@ -391,7 +391,7 @@
             flex: 5;
             font-family: 'BlueRiver', Times, serif;
             color: rgb(249, 250, 252);
-            font-size: 20px;
+            font-size: 2.5vh;
             font-weight: normal;
             }
             
@@ -411,7 +411,7 @@
         flex: 1;
         border: 1px solid;
         /*height: 80vh;*/
-        height: 76.9vh;
+        height: 80.9vh;
         align-items: center;
         text-align: center;
         background-position: center;
@@ -432,14 +432,15 @@
         }
 
         .TituloS {
-        font-family: Hind, sans-serif;
+        /*font-family: Hind, sans-serif;*/
+        font-family: 'Roboto', sans-serif;
         font-size: 26px;
-        color: rgb(249, 250, 252); 
+        color: rgb(65, 66, 66);
         text-align: center;
-        background-color: rgb(37, 37, 39); 
+        /*background-color: rgb(37, 37, 39);*/ 
         height: 4vh;
-        border: 1px solid;
-        border-color: rgb(37, 37, 39);
+        /*border: 1px solid;
+        border-color: rgb(37, 37, 39);*/
         }
         /*Container para Imagens na Esquerda*/
         .ContainerS {
@@ -498,7 +499,8 @@
         .ServicesBox {
         display: flex;
         flex-direction: column;
-        font-family: Hind, sans-serif;
+        /*font-family: Hind, sans-serif;*/
+        font-family: 'Roboto', sans-serif;
         width: 95%;
         height: 95%;
         background-color: rgba(252, 250, 250, 0.5);
@@ -509,7 +511,7 @@
         display: flex;
         height: 24%;
         width: 100%;
-        font-size: 27px;
+        font-size: 2.8vh;
         font-weight: bold;
         color: rgb(65, 66, 66); 
         align-items: center;
@@ -523,7 +525,7 @@
         display: flex;
         height: 6%;
         width: 100%;
-        font-size: 14px;
+        font-size: 1.7vh;
         color: rgb(65, 66, 66); 
         align-items: center;
         text-align: center;
@@ -691,7 +693,7 @@
         #PropositoTexto {
             display: flex;
             flex: 1.3;
-            font-size: 1.1rem;
+            font-size: 2.4vh;
             height: 100%;
             /*width: 25vw;*/
             text-align: center;
@@ -725,25 +727,27 @@
             display: flex;
             flex-direction: column;
             /*gap: .08rem;*/
-            height: 81vh;
+            height: 88vh;
             width: 100vw;
             box-sizing: border-box;
             font-family: 'Roboto', sans-serif;
             color: white;
             background-image: url('../Images/sobre_bg8.jpg');
+        
         }
 
         .NossaHistoria {
             display: flex;
             flex-direction: row;
             flex: 1;
-            height: 100vh;
+            height: 50%;
         }
 
         .NossasPessoas {
             display: flex;
             flex-direction: row;
             flex: 1;
+            height: 50%;
             
         }
 
@@ -771,7 +775,7 @@
         #SobreTitle::after {
             content: "";
             display: block;
-            width: 77%;
+            width: 79%;
             padding-top: 27px;
             border-bottom: 2px solid #f9dd94;
         }
@@ -779,7 +783,9 @@
         #SobreImagem1 {
             display: flex;
             flex: 1;
-            padding: .3rem;
+            align-items: center;
+            justify-content: center;
+            /*padding: .5rem;*/
         }
 
         
