--- a/Views/Partials/Head.ejs
+++ b/Views/Partials/Head.ejs
@@ -757,7 +757,7 @@
             flex: 2;
             padding: 2rem;
             justify-content: left;
-            font-size: 1.1rem;
+            font-size: 2vh;
         }
 
         #SobreTitle {
@@ -769,7 +769,8 @@
             justify-items: left;
             height: 100%;
             font-family: 'Roboto-Bold', sans-serif;
-            font-size: 1.5rem;
+            font-size: 3.1vh;
+            white-space: nowrap;
         }
 
         #SobreTitle::after {
@@ -786,8 +787,18 @@
             align-items: center;
             justify-content: center;
             /*padding: .5rem;*/
+            height: auto;
         }
 
+        #SobreImagem1 img{
+            max-width: 100%;
+            max-height: 95%;
+            height: 39.5vh;
+            width: auto;
+            align-items: center;
+            justify-content: center;
+            margin-top: 0.7vh;
+        }
         
             </style>
         </head>
